--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 /Portafolio01/build/
 /Portafolio02/nbproject/private/
 /Portafolio02/build/
+/Portafolio03/nbproject/private/
+/Portafolio03/build/
